--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ huggingface-hub==0.31.4
 nltk==3.9.1
 numpy==2.2.6
 openai==1.82.0
-opencv-python-headless
+opencv-python-headless==4.9.0.80
 pandas==2.2.3
 pdf2image
 pdfminer.six
@@ -17,4 +17,3 @@ transformers==4.52.3
 unstructured==0.17.2
 unstructured-client==0.35.0
 unstructured-inference==1.0.2
-
