--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,11 @@ huggingface-hub==0.31.4
 nltk==3.9.1
 numpy==1.26.4
 openai==1.82.0
-opencv-python-headless==4.9.0.80
 pandas==2.2.3
-pdf2image
-pdfminer.six
-pi-heif
 pillow==11.2.1
+pymupdf==1.26.0
 requests==2.32.3
 sentence-transformers==4.1.0
 streamlit==1.45.1
 tokenizers==0.21.1
 transformers==4.52.3
-unstructured==0.17.2
-unstructured-client==0.35.0
-unstructured-inference==1.0.2
